--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "electron ."
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.61",
     "electron": "^15.2.0"
   }
 }
